--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.1",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.6.0",
+    "date-fns": "^2.21.3",
     "jquery": "1.9.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
